# eight-bit-music-board

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs  music.rs  rgb.rs
src/music/: list.rs  note.rs
