[package]
name = "eight-bit-music-board"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11.0", features = ["unsafe-assume-single-core"] }
stm32f0xx-hal = { git = "https://github.com/jmjoy/stm32f0xx-hal.git", branch = "hack", features = ["stm32f030x6"] }

[profile.dev]
lto = true
opt-level = "s"
debug = 2

[profile.release]
lto = true
opt-level = "s"
debug = 2
